# Log-Analysis

./: .env.example  GOVERNANCE_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: governance-enforcement.yml  validate-governance.yml
.kiro/: agent-memory.md
.kiro/steering/: change-management.md  governance-framework.md  implementation-plan-requirements.md  security-requirements.md  tdd-requirements.md
docs/: DOCUMENTATION-SUMMARY.md  README.md  insightops-lerest-api (1).yaml
docs/arch/: adr-template.md
docs/arch/adr/: 0001-log-ingestion-tech-stack.md
docs/arch/diagrams/: log-ingestion.mmd
docs/processes/: QUICKSTART.md  change-management.md  definition-of-done.md  governance-quick-reference.md  tech-debt.md
docs/processes/change-requests/: CR-2026-02-09-001.md  (+23 more)
docs/requirements/: rtm.md  slos.md
docs/runbooks/: log-ingestion-service.md
scripts/: check-implementation-plan.sh  generate-cr-template.sh  governance-preflight.sh  validate-qia.sh
src/log_ingestion/: __init__.py  api_client.py  cache_index.py  config.py  env_utils.py  log_selection.py  main.py  parquet_summary.py  parquet_writer.py  parser.py  service.py
tests/: __init__.py  conftest.py  test_api_client.py  test_api_client_coverage_helpers.py  test_api_client_coverage_pagination_polling.py  test_api_client_coverage_raise_rate_limited.py  test_api_client_list_log_sets_embedded_logs_info.py  test_api_client_list_logs.py  test_api_client_list_logs_in_log_set_fallback_404.py  test_api_client_progress_observability.py  test_cache_index.py  test_config.py  test_env_utils.py  test_log_selection.py  test_main.py  test_main_additional_coverage_execpath.py  test_main_module_execution_guard.py  test_main_select_log.py  test_main_validate_iso8601.py  test_main_validate_iso8601_additional_coverage.py  test_parquet_summary.py  test_parquet_writer.py  test_parquet_writer_additional_coverage.py  test_parser.py  test_service.py  test_service_cache.py  test_service_streaming.py
(+31 files in other folders)
